Update customer endpoints
