# app/Http/Requests/StoreCustomerRequest.php
@@ -22,7 +22,9 @@ class StoreCustomerRequest extends FormRequest
     public function rules(): array
     {
         return [
-            //
+            'first_name'  => 'required|min:3|max:30',
+            'last_name' => 'required|min:3|max:30',
+            'email' => 'required|min:3|max:30'
         ];
     }
 }
